<resources>
    <string name="app_name" translatable="false">Aliance.Go</string>
    <string name="MainSearchText1" translatable="false">Выберите</string>
    <string name="MainSearchText2" translatable="false">Комплекс</string>
    <string name="MainSearchText3" translatable="false">Тренеровок</string>
    <string name="SearchButtonOne" translatable="false">Составим тренеровку</string>
    <string name="RunToday" translatable="false">Тренировка на сегодня</string>
    <string name="GoText" translatable="false">Приступим</string>
    <string name="NameTrain" translatable="false">Названия упражнения</string>
    <string name="VideoTrain" translatable="false">Видео</string>
    <string name="TimeName" translatable="false">Таймер</string>
    <string name="TimeNumebr" translatable="false">45</string>
    <string name="button_input">Вход</string>
    <string name="button_registrtion">регистрация</string>
    <string name="input_text">INPUT</string>
    <string name="login_text">login</string>
    <string name="edit_password">password</string>
    <string name="go_text">GO</string>
    <string name="text_registration">REGISTRATION</string>
    <string name="name_text">name</string>
    <string name="lastname_text">lastname</string>
    <string name="back_text">Назад</string>
    <string name="password_text">password</string>
    <string name="email_text">email</string>
    <string name="test_text">test</string>
    <string name="autoriz_text">Авторизуйтесь при помощи Google</string>
    <string name="search_trein">Выбирите тренеровку</string>

</resources>