<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginTop="30sp"
        android:text="@string/input_text"
        android:textAlignment="center"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@+id/main_text"
        android:hint="@string/login_text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@+id/edit_login"
        android:hint="@string/edit_password"
        android:textSize="30sp" />

    <Button
        android:id="@+id/go_button"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@+id/edit_password"
        android:text="@string/go_text" />


</RelativeLayout>