<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/text_registration"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginTop="30sp"
        android:text="@string/text_registration"
        android:textAlignment="center"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editNameForRegistration"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@id/text_registration"
        android:hint="@string/name_text"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editPasswordForRegistration"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@id/editNameForRegistration"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editEmailForRegistration"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@id/editPasswordForRegistration"
        android:hint="@string/email_text"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_registration"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@+id/editEmailForRegistration"
        android:text="@string/text_registration" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_below="@+id/button_registration"
        android:text="@string/back_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/exemple_text"
        android:layout_below="@+id/button_back"
        android:textSize="40sp"
        />
</RelativeLayout>