<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Training_page">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/main_fonts"
        android:text="@string/NameTrain"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_below="@+id/button4"
        android:layout_marginTop="85sp"
        android:fontFamily="@font/main_fonts"
        android:text="@string/TimeName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:fontFamily="@font/main_fonts"
        android:text="@string/TimeNumebr"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="96sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="211sp"
        android:layout_below="@+id/textView4"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="#3A3A3A"
        android:fontFamily="@font/main_fonts"
        android:text="@string/VideoTrain"
        android:textSize="34sp" />
</RelativeLayout>