<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmain2dark"
    tools:context=".RunUpActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/buttonfont"
        android:text="@string/RunToday"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp" />

    <ListView
        android:id="@+id/list"
        android:background="#70ffffff"
        android:layout_width="match_parent"
        android:layout_height="350sp"
        android:dividerHeight="3sp"
        android:layout_below="@+id/textView3"
        android:layout_marginHorizontal="10sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/list"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="#F44336"
        android:fontFamily="@font/main_fonts"
        android:onClick="butClickTwo"
        android:text="@string/GoText"
        android:textSize="24sp" />
    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/button2"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="#F44336"
        android:fontFamily="@font/main_fonts"
        android:onClick="butClickTwo"
        android:text="@string/back_text"
        android:textSize="24sp" />
</RelativeLayout>