<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/simple_back"
    tools:context=".TrainingActivity">

    <TextView
        android:id="@+id/nameAction"
        android:layout_width="381dp"
        android:layout_height="91dp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/buttonfont"
        android:text="@string/NameTrain"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textTimer"
        android:layout_width="match_parent"
        android:layout_height="65sp"
        android:layout_below="@+id/button4"
        android:fontFamily="@font/buttonfont"
        android:layout_marginTop="125sp"
        android:text="@string/TimeName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/timerView"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_below="@+id/textTimer"
        android:fontFamily="@font/buttonfont"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="80sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="361dp"
        android:layout_height="223dp"
        android:layout_below="@+id/nameAction"
        android:layout_marginHorizontal="30sp"
        android:backgroundTint="#3A3A3A"
        android:fontFamily="@font/main_fonts"
        android:text="@string/VideoTrain"
        android:textSize="34sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_below="@id/timerView"
        android:layout_marginHorizontal="30sp"
        android:max="45" />


</RelativeLayout>